<resources>
    <string name="app_name">Life App: Personal Timeline</string>
    <string name="hello_world">Hello world!</string>
    <string name="map">AroundMe</string>
    <string name="social">Social</string>
    <string name="fitness">Fitness</string>
    <string name="carrer">To-do</string>
    <string name="help">Help</string>
    <string name="setting">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="start_app">Starting application:</string>
    <string name="center_click">Center has been clicked</string>
    <string name="notification">LifeApp Notification</string>
    <string name="ping">Click here to see more !</string>
    <string name="snooze">Snooze</string>
    <string name="dismiss">Dismiss</string>
    <string name="snoozing">Snoozing!</string>
    <string name="done_snoozing">Done Snoozing.</string>
    <string name="timer_start">Setting the timer</string>
    <string name="sleep_error">Sleep failure</string>
    <string name="timer_finished">Timer finished.</string>
     <string name="switch_account">Switch Account</string>
    <string name="view_intro">View Intro</string>
    <string name="skip_intro">Skip intro next time</string>
    <string name="announce_success">YOU HAVE JOINED</string>
    <string name="announce_fail">CONNECTION FAILED</string>
    <string name="send">Send</string>
    <string name="send_message">sendMessage</string>
    <string name="empty_string"></string>
    <string name="no_messages">No messages yet</string>
    <string name="intro_title">Life App: Personal Timeline</string>
    <string name="app_desc">Our mission is to constantly track user’s activity and provide useful information (location and time based) to the user.
	</string>
    <string name="app_desc1"><font color='white'><b>AroundMe</b></font> - AroundMe provides simple access to local information like restaurants, events and local attractions.\n<font color='white'><b>Fitness</b></font> - This allows to maintain your health and keep a track of your calories and daily workout goals.\n<font color='white'><b>Social</b></font>– Displays trend analysis from Facebook, Twitter sites.\n<font color='white'><b>2do</b></font> – This effective to-do list lets you keep track of everything you need to do and Organize tasks in your own to-do lists.\n
    </string>
	<string name="recent_review">Review Highlights and Insights</string>
	<string name="pref_food_setting">Food Settings</string>
    <string name="pref_resto">Food Categories</string>
    <string name="pref_summary">Set the types</string>
    <string name="pref_resto_radius">Target Radius</string>
    <string name="pref_resto_radius_summary">Set the radius</string>
    <string name="pref_event_setting">Event Settings</string>
    <string name="pref_event">Event Categories</string>
    <string name="notification_on">Show Notification</string>
    <string name="pref_notification">Set notification alert</string>
	   <string name="action_settings">Settings</string>
    <string name="blopsound">blopsound</string>
    <string name="notification_subtitle">Counting your steps</string>
    <string name="started">Pedometer started.</string>
    <string name="stopped">Pedometer stopped.</string>
    <string name="steps">steps</string>
    <string name="kilometers">kilometers</string>
    <string name="miles">miles</string>
    <string name="steps_per_minute">steps / minute</string>
    <string name="kilometers_per_hour">kilometers / hour</string>
    <string name="miles_per_hour">miles / hour</string>
    <string name="calories_burned">calories burned</string>
    <string name="centimeters">centimeters</string>
    <string name="inches">inches</string>
    <string name="kilograms">kilograms</string>
    <string name="pounds">pounds</string>
    <string name="desired_pace">Desired pace:</string>
    <string name="desired_speed">Desired speed:</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="reset">Reset</string>
    <string name="settings">Settings</string>
    <string name="activity_settings">Pedometer Settings</string>
    <string name="steps_settings_title">Basic Settings</string>
    <string name="sensitivity_setting">Sensitivity</string>
    <string name="sensitivity_setting_details">Calibrate the step detector</string>
    <string name="sensitivity_setting_title">Select sensitivity level</string>
    <string name="extra_high">extra high</string>
    <string name="very_high">very high</string>
    <string name="high">high</string>
    <string name="higher">higher</string>
    <string name="medium">medium</string>
    <string name="lower">lower</string>
    <string name="low">low</string>
    <string name="very_low">very low</string>
    <string name="extra_low">extra low</string>
    <string name="operation_level_setting">Operational level</string>
    <string name="operation_level_setting_details">Some OS versions prevent using sensors when the screen is off; set the level that works for you</string>
    <string name="operation_level_setting_title">Select operational level</string>
    <string name="run_in_background">Normal (just try running in background)</string>
    <string name="keep_screen_on">Screen on (keep screen dim)</string>
    <string name="wake_up">Aggressive (wake up when I turn screen off)</string>
    <string name="units_setting">Units</string>
    <string name="units_setting_details">Imperial or metric units</string>
    <string name="units_setting_title">Choose your units</string>
    <string name="units_metric">metric (kilometers)</string>
    <string name="units_imperial">imperial (miles)</string>
    <string name="step_length_setting">Step length</string>
    <string name="step_length_setting_details">For distance, speed &amp; calorie calculation</string>
    <string name="step_length_setting_title">Enter your step length</string>
    <string name="body_weight_setting">Body weight</string>
    <string name="body_weight_setting_details">For calorie calculation</string>
    <string name="body_weight_setting_title">Enter your body weight</string>
    <string name="exercise_type_setting">Exercise type</string>
    <string name="exercise_type_setting_details">For calorie calculation</string>
    <string name="exercise_type_setting_title">Choose exercise type</string>
    <string name="exercise_type_running">running</string>
    <string name="exercise_type_walking">walking</string>
    <string name="maintain_setting">Maintain pace/speed</string>
    <string name="maintain_setting_details">Maintaining a desired a pace/speed</string>
    <string name="maintain_setting_title">Maintain:</string>
    <string name="maintain_nothing">nothing</string>
    <string name="maintain_pace">pace</string>
    <string name="maintain_speed">speed</string>
    <string name="voice_settings_title">Voice</string>
    <string name="voice_setting">Speak</string>
    <string name="voice_setting_details">Enable/disable voice notification</string>
    <string name="speaking_interval_setting">Interval</string>
    <string name="speaking_interval_setting_details">Voice notification interval</string>
    <string name="interval_15_seconds">15 seconds</string>
    <string name="interval_30_seconds">30 seconds</string>
    <string name="interval_1_minute">1 minute</string>
    <string name="interval_2_minutes">2 minutes</string>
    <string name="interval_5_minutes">5 minutes</string>
    <string name="interval_10_minutes">10 minutes</string>
    <string name="tell_what">What to tell</string>
    <string name="tell_steps_setting">Steps</string>
    <string name="tell_steps_setting_details"></string>
    <string name="tell_pace_setting">Pace</string>
    <string name="tell_pace_setting_details">steps / minute</string>
    <string name="tell_distance_setting">Distance</string>
    <string name="tell_distance_setting_details">kilometers or miles</string>
    <string name="tell_speed_setting">Speed</string>
    <string name="tell_speed_setting_details">km/h or mph</string>
    <string name="tell_calories_setting">Calories burned</string>
    <string name="tell_calories_setting_details"></string>
    <string name="tell_fasterslower_setting">Faster/slower</string>
    <string name="tell_fasterslower_setting_details">Helps you maintain your desired pace or speed (interval doesn\'t apply)</string>
    <string name="incorrect_step_length">Incorrect step length format! Go to the Settings to change it!</string>
    <string name="quit">Quit</string>
    <string name="activity_title">Manage Activity Updates</string>
    <string name="app_description">Demonstrates activity recognition</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="connected">Connected to Location Services</string>
    <string name="disconnected">Disconnected from Location Services</string>
    <string name="connection_failed">Connection to service failed: error code %1$d</string>
    <string name="log_file_deletion_error">Log file deletion error.</string>
    <string name="notification_title">You are moving</string>
    <string name="turn_on_GPS">Click to turn on GPS, or swipe to ignore</string>
    <string name="activity_updates_requested">Activity updates requested</string>
    <string name="service_not_connected">Not connected to Location Services</string>
    <string name="activity_updates_stop">Stopping activity update requests</string>
    <string name="log_message">Log: timestamp: %1$s type %2$s confidence %3$d</string>
    <string name="menu_item_clearlog">Clear Log</string>
    <string name="menu_item_showlog">Show Log</string>
    <string name="logs_deleted">Log file(s) deleted</string>
    <string name="start_updates">Start Updates</string>
    <string name="stop_updates">Stop Updates</string>
    <string name="play_services_available">Location Services is available</string>
    <string name="invalid_action">Invalid action received. See error log for details.</string>
    <string name="invalid_action_detail">Invalid action %1$s received.</string>
    <string name="unknown">--Unknown--</string>
    <string name="no_log_data">No log data is available</string>
    <string name="activity_recognition_error_detail">
        Activity recognition error, code %1$d message %2$s.
    </string>
    <string name="date_format_error">Internal error: date formatting exception.</string>
    <string name="log_filename">%1$s%2$s%3$d%4$s</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="menu_menu">Menu</string>
    <string name="menu_goal">Set Goals</string>
    <string name="menu_contact">Contact Recruiter</string>
    <string name="menu_interview">Interviews</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_search">Search Datastore</string>
    <string name="conversation_date_label">Time</string>
    <string name="conversation_recr_name_label">Recruiter</string>
    <string name="conversation_recr_company_label">Recr. Co.</string>
    <string name="conversation_job_title_label">Job Title</string>
    <string name="conversation_job_company_label">Job Co.</string>
    <string name="conversation_job_address_label">Job Address</string>
    <string name="conversation_job_postcode_label">Job Postcode</string>
    <string name="conversation_comments_label">Comments</string>
    <string name="conversation_button">Save</string>
    <string name="interview_date_label">Time</string>
    <string name="goal_title">Goal Title</string>
    <string name="goal_desc">Description</string>
    <string name="goal_location">Location</string>
    <string name="goal_button">Save</string>
    <string name="search_cat_label">Category</string>
    <string name="search_item_label">Search Item</string>
    <string name="search_prompt">Choose</string>
    <string name="search_button">Search</string>
</resources>